--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "mongoose": "^7.0.0"
   },
   "name": "hm-dbh",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/happy-mama/DBH"
+  },
   "main": "./src/DBH.js",
   "scripts": {},
-  "author": "",
+  "author": {
+    "name": "happy-mama"
+  },
   "license": "ISC",
   "description": ""
 }
