--- a/src/config.json
+++ b/src/config.json
@@ -1,132 +1,150 @@
 {
-    "gen": {
-        "formats": {
-            "check": {
-                "que": 0,
-                "params": {
-                    "rules": true
-                },
-                "errors": {
-                    "q": "string",
-                    "TYPEOF_RULE": "string",
-                    "RULE": "string"
-                }
-            },
-            "get": {
-                "que": 2,
-                "params": {
-                    "checkMethodType": "check",
-                    "mainMethodType": "find",
-                    "cacheMethodType": "cache"
-                },
-                "errors": {}
-            },
-            "post": {
-                "que": 2,
-                "params": {
-                    "checkMethodType": "check",
-                    "cacheMethodType": "cache",
-                    "checkEquals": true,
-                    "disableCopies": true
-                },
-                "errors": {
-                    "checkEquals": "string",
-                    "disableCopies": "string"
-                }
-            },
-            "cache": {
-                "que": 1,
-                "params": {
-                    "checkMethodType": "check"
-                },
-                "errors": {
-                    "main": "string"
-                }
-            },
-            "find": {
-                "que": 1,
-                "params": {
-                    "checkMethodType": "check"
-                },
-                "errors": {
-                    "main": "string"
-                }
-            },
-            "put": {
-                "que": 2,
-                "params": {
-                    "checkMethodType": "check",
-                    "mainMethodType": "find",
-                    "checkEquals": true
-                },
-                "errors": {
-                    "checkEquals": "string",
-                    "main": "string",
-                    "q": "string"
-                }
-            },
-            "delete": {
-                "que": 2,
-                "params": {
-                    "checkMethodType": "check",
-                    "mainMethodType": "find"
-                },
-                "errors": {}
-            },
-            "postJWT": {
-                "que": 1,
-                "params": {
-                    "checkMethodType": "check",
-                    "cacheMethodType": "cache"
-                },
-                "errors": {}
-            },
-            "getJWT": {
-                "que": 1,
-                "params": {
-                    "cacheMethodType": "cache"
-                },
-                "errors": {
-                    "q": "string",
-                    "JWTstring": "string",
-                    "JWTerror": "string"
-                }
-            },
-            "inOutJWT": {
-                "que": 4,
-                "params": {
-                    "mainMethodType": "any",
-                    "getJWTMethodType": "getJWT",
-                    "postJWTMethodType": "postJWT"
-                },
-                "errors": {}
-            },
-            "inJWT": {
-                "que": 4,
-                "params": {
-                    "mainMethodType": "any",
-                    "getJWTMethodType": "getJWT"
-                },
-                "errors": {}
-            },
-            "outJWT": {
-                "que": 4,
-                "params": {
-                    "mainMethodType": "any",
-                    "postJWTMethodType": "postJWT"
-                },
-                "errors": {}
-            },
-            "getById": {
-                "que": 1,
-                "params": {},
-                "errors": {
-                    "q": "string",
-                    "main": "string"
-                }
-            }
+  "gen": {
+    "formats": {
+      "check": {
+        "que": 0,
+        "params": {
+          "rules": true
+        },
+        "errors": {
+          "q": "string",
+          "TYPEOF_RULE": "string",
+          "RULE": "string"
         }
-    },
-    "debug": false,
-    "initClearMemory": true
+      },
+      "get": {
+        "que": 2,
+        "params": {
+          "checkMethodType": "check",
+          "mainMethodType": "find",
+          "cacheMethodType": "cache"
+        },
+        "errors": {}
+      },
+      "post": {
+        "que": 2,
+        "params": {
+          "checkMethodType": "check",
+          "cacheMethodType": "cache",
+          "checkEquals": true,
+          "disableCopies": true
+        },
+        "errors": {
+          "checkEquals": "string",
+          "disableCopies": "string"
+        }
+      },
+      "cache": {
+        "que": 1,
+        "params": {
+          "checkMethodType": "check"
+        },
+        "errors": {
+          "main": "string"
+        }
+      },
+      "find": {
+        "que": 1,
+        "params": {
+          "checkMethodType": "check"
+        },
+        "errors": {
+          "main": "string"
+        }
+      },
+      "put": {
+        "que": 2,
+        "params": {
+          "checkMethodType": "check",
+          "mainMethodType": "find",
+          "checkEquals": true,
+          "disableCopies": true
+        },
+        "errors": {
+          "checkEquals": "string",
+          "main": "string",
+          "q": "string"
+        }
+      },
+      "putById": {
+        "que": 2,
+        "params": {
+          "checkMethodType": "check",
+          "mainMethodType": "getById",
+          "secondMethodType": "find",
+          "secondMethodDependency": "disableCopies",
+          "checkEquals": true,
+          "disableCopies": true
+        },
+        "errors": {
+          "checkEquals": "string",
+          "main": "string",
+          "q": "string",
+          "idIsNotAString": "string"
+        }
+      },
+      "delete": {
+        "que": 2,
+        "params": {
+          "checkMethodType": "check",
+          "mainMethodType": "find"
+        },
+        "errors": {}
+      },
+      "postJWT": {
+        "que": 1,
+        "params": {
+          "checkMethodType": "check",
+          "cacheMethodType": "cache"
+        },
+        "errors": {}
+      },
+      "getJWT": {
+        "que": 1,
+        "params": {
+          "cacheMethodType": "cache"
+        },
+        "errors": {
+          "q": "string",
+          "JWTstring": "string",
+          "JWTerror": "string"
+        }
+      },
+      "inOutJWT": {
+        "que": 4,
+        "params": {
+          "mainMethodType": "any",
+          "getJWTMethodType": "getJWT",
+          "postJWTMethodType": "postJWT"
+        },
+        "errors": {}
+      },
+      "inJWT": {
+        "que": 4,
+        "params": {
+          "mainMethodType": "any",
+          "getJWTMethodType": "getJWT"
+        },
+        "errors": {}
+      },
+      "outJWT": {
+        "que": 4,
+        "params": {
+          "mainMethodType": "any",
+          "postJWTMethodType": "postJWT"
+        },
+        "errors": {}
+      },
+      "getById": {
+        "que": 1,
+        "params": {},
+        "errors": {
+          "q": "string",
+          "main": "string"
+        }
+      }
+    }
+  },
+  "debug": false,
+  "initClearMemory": true
 }
