--- a/src/config.json
+++ b/src/config.json
@@ -7,9 +7,7 @@
           "rules": true
         },
         "errors": {
-          "q": "string",
-          "TYPEOF_RULE": "string",
-          "RULE": "string"
+          "q": "string"
         }
       },
       "get": {
